--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
 
     <!-- 주문 목록 전용 스크립트 -->
     <script th:src="@{/js/delivery/deliveryList.js}"></script>
