--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ko.js"></script>
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/order/orderCancel.js}"></script>
     <script th:src="@{/js/order/order.js}"></script>
