--- a/src/main/resources/static/css/auth/profile.css
+++ b/src/main/resources/static/css/auth/profile.css
@@ -128,12 +128,14 @@ button {
 }
 
 .delete-btn {
-    background-color: white;
-    color: #F38B20;
-    border: 2px solid #F38B20;
+    background-color: #fff;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: #333;
+    border: none;
+    outline: none;
 }
 .delete-btn:hover {
-    background-color: whitesmoke;
+    background-color: #ddd;
 }
 
 /* 📱 반응형 */
@@ -163,13 +165,15 @@ button {
 }
 
 .round-pill {
-    color: #F38B20 !important;
+    color: #333 !important;
     padding: 8px 18px;
     border-radius: 999px;
-    border: 1px solid #F38B20;
+    border: none;
+    outline: none;
     font-weight: 600;
     display: inline-block;
     margin: 6px 0;
-    box-shadow: 0 2px 6px rgba(243, 139, 32, 0.15);
+    background-color: whitesmoke;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
     width: fit-content;
 }
