--- a/src/main/resources/static/css/menu/main.css
+++ b/src/main/resources/static/css/menu/main.css
@@ -40,7 +40,7 @@ h1 {
 h2 {
     font-size: 18px;
     font-weight: 600;
-    color: #4d2c14;
+    color: #333;
     margin-bottom: 10px;
     margin-top: 24px;
 }
@@ -50,15 +50,17 @@ select {
     padding: 12px;
     font-size: 15px;
     border-radius: 10px;
-    border: 1px solid #ccc;
-    background-color: #fffaf0;
+    border:none;
+    outline:none;
+    background-color: whitesmoke;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
     font-family: 'Noto Sans KR', sans-serif;
     transition: border-color 0.3s ease;
     margin-bottom: 20px;
 }
 
 select:focus {
-    border-color: var(--theme-orange);
+    border: none;
     outline: none;
 }
 
