--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/auth/profile.js}"></script>
     <script th:src="@{/js/kakaoMobility.js}"></script>
     <link th:href="@{/css/common.css}" rel="stylesheet">
