--- a/src/main/resources/templates/menu/cheeseEdit.html
+++ b/src/main/resources/templates/menu/cheeseEdit.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/menu/cheeseEdit.js}"></script> <!-- 외부 JS 파일 -->
     <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/commonEdit.css}" rel="stylesheet">
