--- a/src/main/resources/templates/menu/main.html
+++ b/src/main/resources/templates/menu/main.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/menu/main.css}">
+    <script th:src="@{/js/layout.js}"></script>
 </head>
 <body>
 <div th:replace="~{header :: header}"></div>
