--- a/src/main/resources/templates/menu/menuAdmin.html
+++ b/src/main/resources/templates/menu/menuAdmin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/menu/menuAdmin.js}"></script>
     <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/menuAdmin.css}" rel="stylesheet">
