--- a/src/main/resources/templates/menu/menuEdit.html
+++ b/src/main/resources/templates/menu/menuEdit.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script src="/js/menu/menuEdit.js"></script>
     <link href="/css/common.css" rel="stylesheet">
     <link href="/css/menu/menuEdit.css" rel="stylesheet">
