--- a/src/main/resources/templates/menu/vegetableEdit.html
+++ b/src/main/resources/templates/menu/vegetableEdit.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script src="/js/menu/vegetableEdit.js"></script>
     <link href="/css/common.css" rel="stylesheet">
     <link href="/css/menu/commonEdit.css" rel="stylesheet">
