--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/css/order/orderDetail.css}">
   <script th:src="@{/js/order/orderCancel.js}"></script>
   <script th:src="@{/js/common.js}"></script>
+  <script th:src="@{/js/layout.js}"></script>
   <script th:src="@{/js/auth/profile.js}"></script>
   <script th:src="@{/js/findAddress.js}"></script>
   <script th:src="@{/js/store/storeList.js}"></script>
@@ -18,10 +19,10 @@
 <header>
   <div th:replace="~{header :: header}"></div>
   <div th:replace="~{navigation :: nav}"></div>
-  <h1>주문 내역</h1>
 </header>
 
 <main>
+  <h1>주문 내역</h1>
   <table id="order-table">
     <thead>
     <tr>
