--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/store/storeDetail.js}"></script>
     <link th:href="@{/css/common.css}" rel="stylesheet">
