--- a/src/main/resources/templates/chat/chat-room.html
+++ b/src/main/resources/templates/chat/chat-room.html
@@ -36,6 +36,9 @@
     <button id="sendBtn">전송</button>
 
 </div>
-
+<script>
+    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+</script>
 </body>
+
 </html>
