--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -27,6 +27,8 @@
     <!-- 방 목록이 여기에 표시됩니다 -->
 </div>
 
-
+<script>
+    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+</script>
 </body>
 </html>
