--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -109,6 +109,8 @@
         <div id="modalContent"></div>
     </div>
 </div>
-
+<script>
+    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+</script>
 </body>
 </html>
