update socket url

--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -113,7 +113,7 @@
 <!--</footer>-->
 <div th:replace="~{footer :: footer}"></div>
 <script>
-    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
 </script>
 </body>
 </html>
