--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -28,7 +28,7 @@
 </div>
 
 <script>
-    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
 </script>
 </body>
 </html>
