--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -65,7 +65,7 @@
     </div>
 </div>
 <script>
-    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
 </script>
 <div th:replace="~{footer :: footer}"></div>
 </body>
