--- a/src/main/resources/templates/chat/chat-room.html
+++ b/src/main/resources/templates/chat/chat-room.html
@@ -37,7 +37,7 @@
 
 </div>
 <script>
-    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
 </script>
 </body>
 
