--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 <script>
-    const WEBSOCKET_URL = /*[[${websocketUrl}]]*/ "http://localhost:9006/delivery-location";
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
 </script>
 </body>
 </html>
