front update (menu admin not end)

--- a/src/main/resources/static/css/delivery/deliveryList.css
+++ b/src/main/resources/static/css/delivery/deliveryList.css
@@ -133,7 +133,6 @@ th, td {
     padding: 14px 16px;
     text-align: center;
     color: #4d3321;
-    /*border-bottom: 1px solid #e6d6b7;*/
     font-size: 14px;
 }
 
@@ -237,4 +236,20 @@ input[type="checkbox"]:checked::after {
         min-width: 70px;
         min-height: 36px;
     }
+}
+
+.start-delivery-btn, .end-delivery-btn {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 999px;
+    background-color: #F38B20;
+    padding: 10px 12px;
+    font-weight: bold;
+    word-wrap: break-word;
+    color: #fff;
+}
+
+.start-delivery-btn:hover, .end-delivery-btn:hover {
+    background-color: #d7730f;
 }
