--- a/src/main/resources/static/css/menu/menuAdmin.css
+++ b/src/main/resources/static/css/menu/menuAdmin.css
@@ -153,3 +153,27 @@ textarea {
     margin-bottom: 16px;
 }
 
+.option-button {
+    display: inline-block;
+    padding: 10px 14px;
+    margin: 5px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.2s;
+    user-select: none;
+}
+
+.option-button.selected {
+    background-color: #f97316;
+    color: white;
+    border-color: #f97316;
+}
+.option-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 16px;
+    gap: 8px;
+}
+
