--- a/src/main/resources/templates/menu/menuAdmin.html
+++ b/src/main/resources/templates/menu/menuAdmin.html
@@ -4,6 +4,7 @@
     <title>메뉴 등록</title>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/menu/menuAdmin.js}"></script>
