--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>주문 내역</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" th:href="@{/css/common.css}">
   <link rel="stylesheet" th:href="@{/css/order/orderDetail.css}">
   <script th:src="@{/js/order/orderCancel.js}"></script>
